# rickbot-adk

./: .dockerignore  .env  .env.template  .envrc  .gitattributes  .gitignore  .pylintrc  Dockerfile  Dockerfile.api  Dockerfile.api_sidecar  Dockerfile.original  Dockerfile.react_fe  Dockerfile.streamlit  Dockerfile.unified  GEMINI.md  Makefile  README.md  TODO.md  a2as.yaml  agent-starter-pack-README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup-env.sh
.backup_rickbot-adk_20250809_085508/: README.md  pyproject.toml
.backup_rickbot-adk_20250809_085508/.cloudbuild/: pr_checks.yaml
.backup_rickbot-adk_20250809_085508/deployment/terraform/: backend.tf  secrets.tf  variables.tf
.backup_rickbot-adk_20250809_085508/frontend/: chat.py
.backup_rickbot-adk_20250809_085508/notebooks/: adk_app_testing.ipynb
.backup_rickbot-adk_20250809_085508/rickbot_agent/: agent.py  personality.py
.backup_rickbot-adk_20250809_085508/rickbot_agent/data/: personalities.yaml
.backup_rickbot-adk_20250809_085508/rickbot_agent/utils/: tracing.py
.backup_rickbot-adk_20250809_085508/tests/integration/: test_agent.py
.backup_rickbot-adk_20250809_085508/tests/load_test/: README.md  load_test.py
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.gemini/: .env  settings.json
adk_sample_app/: __init__.py  server.py
adk_sample_app/utils/: typing.py
app/: agent_engine_app.py  server.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/api_rate_limiting_with_slowapi_20260127/: index.md  metadata.json  plan.md  spec.md
conductor/archive/auth_20251223/: metadata.json  plan.md  spec.md
conductor/archive/containerize_ui_api_20260130/: plan.md
conductor/archive/fix_file_search_prioritization_20260104/: metadata.json  plan.md  spec.md
conductor/archive/generic_file_search_store_20260104/: metadata.json  spec.md
conductor/archive/persona_metadata_20251229/: metadata.json  plan.md  spec.md
conductor/archive/ui_enhancements_rick_morty_20251229/: metadata.json  spec.md
conductor/archive/ui_parity_artifacts_20251229/: metadata.json  plan.md  spec.md
conductor/archive/ui_refinements_layout_assets_20251229/: metadata.json  plan.md  spec.md
conductor/archive/ui_tool_visibility_20260104/: metadata.json
conductor/archive/unified_testing_docs_20251229/: metadata.json  plan.md  spec.md
conductor/code_styleguides/: general.md  python.md
conductor/tracks/api_rate_limiting_with_slowapi_20260127/: plan.md
conductor/tracks/auth_20251223/: plan.md  spec.md
conductor/tracks/containerize_ui_api_20260130/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/generic_file_search_store_20260104/: plan.md
conductor/tracks/identity_persona_access_20260205/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/persona_metadata_20251229/: plan.md
conductor/tracks/react_ui_integration_20260129/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/react_ui_sidecar_20260129/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/ui_enhancements_rick_morty_20251229/: plan.md
conductor/tracks/ui_header_avatars_20251230/: metadata.json  plan.md  spec.md
conductor/tracks/ui_parity_artifacts_20251229/: plan.md
conductor/tracks/ui_refinements_layout_assets_20251229/: plan.md  spec.md
conductor/tracks/ui_tool_visibility_20260104/: plan.md  spec.md
conductor/tracks/unified_testing_docs_20251229/: plan.md
deployment/: README.md
deployment/terraform/: alloydb.tf  apis.tf  artifact_registry.tf  build_triggers.tf  firestore.tf  github.tf  iam.tf  locals.tf  providers.tf  secrets.tf  service.tf  service_accounts.tf  storage.tf  variables.tf
deployment/terraform/dev/: alloydb.tf  apis.tf  service.tf  variables.tf
deployment/terraform/vars/: env.tfvars  env.tfvars.template
docs/: containers.md  design.md  nextui_walkthrough.md  sidecar_implementation_guide.md  testing.md
frontend/: app.py  chat.py  config.py  utils.py
media/: rickbot-with-fastapi-tiered.excalidraw
notebooks/: .env.local  adk_app_testing.ipynb  file_search_store.ipynb  rickbot_experiments.ipynb
rickbot_agent/: agent.py  agent_engine_app.py  personality.py  utils.py
rickbot_agent/data/system_prompts/: donald.txt
rickbot_agent/utils/: typing.py
scripts/: check_firestore.py  deploy-prod.sh  deploy-staging.sh  seed_firestore.py  setup-env.sh  start-unified.sh  test_rickbot_agent.py
secure_dev_config/: dazbo.md  dazbo.txt
secure_prompts/: dazbo.txt
src/: main.py
src/nextjs_fe/: .dockerignore  .env.local  .env.local.example  Dockerfile  jest.setup.ts  next.config.js  package-lock.json  package.json
src/nextjs_fe/__tests__/: AuthButton.test.tsx  Chat.test.tsx  ChatLoading.test.tsx  ChatOverrides.test.tsx  Header.test.tsx  Privacy.test.tsx  Theme.test.tsx  Thinking.test.tsx  UpgradeRequired.test.tsx
src/nextjs_fe/components/: AuthButton.tsx  Chat.tsx  Header.tsx  MeeseeksBoxIcon.tsx  PlumbusIcon.tsx  PortalAnimation.tsx  PortalGunIcon.tsx  Thinking.tsx
src/nextjs_fe/pages/: _app.tsx  index.tsx  privacy.tsx
src/nextjs_fe/styles/: globals.css  theme.ts
src/nextjs_fe/types/: chat.ts  next-auth.d.ts
src/rickbot_agent/: .env  __init__.py  agent.py  auth.py  auth_middleware.py  auth_models.py  config.py  personality.py  secret_utils.py  services.py  tools_custom.py
src/rickbot_agent/data/: personalities.yaml
src/rickbot_utils/: config.py  logging_utils.py  rate_limit.py
src/streamlit_fe/: .env  __init__.py  app.py  chat.py  create_auth_secrets.py  st_config.py  st_utils.py  utils.py
src/streamlit_fe/pages/: privacy_policy.py
src/tests/: README.md  conftest.py
src/tests/integration/: test_agent.py  test_api.py  test_artifacts.py  test_dazbo_rag_integration.py  test_gcs_integration.py  test_personalities.py  test_rate_limit_integration.py  test_rbac_e2e.py  test_rickbot_agent_multiturn.py  test_server_e2e.py  test_streamlit_fe.py  test_tool_status.py
tests/integration/: test_agent_engine_app.py  test_server_e2e.py
working_docs/: rickbot_refactor_plan.md
(+30 files in other folders)
